--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
 </head>
 <body>
     <h1>Hi</h1>
+    <div class="container">
+        <div>000</div>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>0</button>
 
+        <button>+</button>
+        <button>-</button>
+        <button>/</button>
+        <button>*</button>
+
+        <button>=</button>
+        <button>ac</button>
+    </div>
 
 
     <script src="./js/scripts.js"></script>
