--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hi</h1>
     <div class="container">
-        <div>000</div>
+        <div class="display"></div>
         <button>1</button>
         <button>2</button>
         <button>3</button>
